--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                         <a class="btn btn-dark btn-social mx-2" href="https://www.youtube.com/user/ogcvideo"><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/open-geospatial-consortium"><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                    <div class="col-lg-4 text-lg-end"><a class="link-dark text-decoration-none me-3" data-bs-toggle="modal" data-bs-target="#portfolioModal1">Privacy Policy</a></div>
+                    <div class="col-lg-4 text-lg-end"><a class="link-dark text-decoration-none me-3" data-bs-toggle="modal" data-bs-target="#portfolioModal1">Privacy Policy - Test</a></div>
                 </div>
             </div>
         </footer>
